[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/PickupSpawn.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/WeaponSpawn/WeaponSpawn1.png" type="Texture" id=2]
[ext_resource path="res://Assets/weapons/pistol.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 16 )

[node name="PickupSpawn" type="Area2D"]
script = ExtResource( 1 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -24 )
shape = SubResource( 1 )

[node name="PickupSprite" type="Sprite" parent="."]
position = Vector2( 0, -30 )
rotation = -0.349066
texture = ExtResource( 3 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.001
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_PickupSpawn_body_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
